feat: change structure for favorites
